--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Jenkins CI/CD pipeline to deploy Spring Boot web app on EKS using ArgoCD</div></a>
+    <a class="navbar-brand" href="#">Ultimate CI/CD Pipeline using Java</div></a>
 </nav>
 
 <main role="main" class="container">
